--- a/Contact us.html
+++ b/Contact us.html
@@ -12,7 +12,7 @@
      <hr>
 
      <br>
-     <form action="mailto:jaspreetsinghrathi@gmail.com" method="post" enctype="text/plain">
+     <form action="mailto:jaspreetsinghrathi99@gmail.com" method="post" enctype="text/plain">
        <label>Your Name:</label>
        <input type="text" name="your name" value="">
        <input type="color" name="" value=""><br><br>
